[gd_scene load_steps=8 format=2]

[ext_resource path="res://start_screen.gd" type="Script" id=1]
[ext_resource path="res://TradeWinds-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/hint_bg.svg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]

size = 192
use_mipmaps = false
use_filter = false
extra_spacing_top = -24
extra_spacing_bottom = -24
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 512, 1152, 0, 0, 0, 0, 512, 768 )
}

[sub_resource type="Curve2D" id=4]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 512, 768, 0, 0, 0, 0, 512, 0 )
}

[node name="start_screen" type="Node2D"]

script = ExtResource( 1 )

[node name="title" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_right = 960.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.752941, 0.176471, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.752941 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 12
text = "MISTY ISLES"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants" ]

[node name="author" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 512.0
margin_right = 960.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = -13
custom_constants/shadow_offset_y = 3
text = "A game by @frozenfractal
Made in 48 hours for the 2nd Alakajam!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="hint_bg" type="Sprite" parent="." index="2"]

position = Vector2( 512, 928 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="instructions" type="Label" parent="hint_bg" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -448.0
margin_top = -22.0
margin_right = 448.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.960784, 0.615686, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 3
text = "CLICK TO START"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="path_in" type="Path2D" parent="." index="3"]

curve = SubResource( 3 )

[node name="path_out" type="Path2D" parent="." index="4"]

curve = SubResource( 4 )

[node name="solved_timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="fade_tween" type="Tween" parent="." index="6"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[connection signal="timeout" from="solved_timer" to="." method="_on_solved_timer_timeout"]


